# petrycmake

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE.txt  README.md
.github/cmake-toolchains/: README.md  clang-cl.cmake  gcc.cmake  llvm.cmake  macos-gcc.cmake  macos-llvm.cmake
.github/workflows/: main.yml
Modules/: PetryBuildType.cmake  PetryCMake.cmake  PetryCompilerWarnings.cmake  PetrySanitiser.cmake
cmake/: petrycmakeConfig.cmake.in
test/: CMakeLists.txt
test/common_test_root/: CMakeLists.txt
test/test_build_type/: CMakeLists.txt  test_bad_config.cmake  test_multi_config.cmake  test_single_config.cmake  test_single_config_preset.cmake
test/test_build_type/test_bad_config/: CMakeLists.txt
test/test_build_type/test_multi_config/: CMakeLists.txt
test/test_build_type/test_single_config/: CMakeLists.txt
test/test_build_type/test_single_config_preset/: CMakeLists.txt
test/test_compiler_warnings/: CMakeLists.txt  foo.c  foo.h  main.cpp  test_compiler_warnings.cmake
test/test_fetch_content/: CMakeLists.txt
test/test_find_package/: CMakeLists.txt
test/test_sanitiser/: CMakeLists.txt  main.cpp  test_sanitiser.cmake
